--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,10 @@
   --success-color: #28a745;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,6 +23,19 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #333;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  width: 0px;
+  background-color: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
 }
 
 .invert {
@@ -667,5 +684,24 @@ button {
   .post a,
   .post button {
     padding: 0.3rem 0.4rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .darkmodebutton {
+    transform: translateX(-10px);
+    transition: all 0.5s ease-in-out;
+    opacity: 1;
+  }
+
+  .darkmodecircle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 0;
+    width: 0;
+    background-color: #000;
+    border-radius: 50%;
   }
 }
