--- a/client/src/App.css
+++ b/client/src/App.css
@@ -687,14 +687,15 @@ button {
   }
 
   .navbar:hover .darkmodebutton {
-    transform: translateX(-20px);
+    transform: translateX(-30px);
     opacity: 100%;
   }
 
   .darkmodebutton {
-    transform: translateX(-20px);
+    transform: translateX(-30px);
     transition: all 0.5s ease-in-out;
-    opacity: 1;
+    opacity: 100%;
+    color: white;
   }
 
   .darkmodecircle {
