Prepared for deployment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -420,7 +420,7 @@ button {
 .darkmodebutton {
   transform: translateX(-10px);
   transition: all 0.5s ease-in-out;
-  opacity: 100%;
+  opacity: 1;
 }
 
 .navbar ul {
@@ -689,11 +689,7 @@ button {
   .darkmodebutton {
     position: relative;
     transform: translateX(-10px);
-    opacity: 100%;
-  }
-  .navbar:hover .darkmodebutton {
-    transform: translateX(-10px);
-    opacity: 100%;
+    opacity: 1;
   }
 
   .darkmodecircle {
